--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ p{
     margin:auto;
     display:flex;
     flex-direction: column;   
-    height:90vh;
+    margin-top:20px;
     justify-content: center;
     align-items: center;
 }
